Fixed some spacing around the formulas and inputs

--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ button:hover {
   display: flex;
   justify-content: center;
 
-  margin-top: 10px;
+  margin: 10px 0;
 
   width: 100%;
 }
@@ -254,7 +254,7 @@ button:hover {
 
 /* Formulas */
 #dynamic {
-  margin-bottom: 0;
+  margin-top: 0;
 }
 
 @media only screen and (max-width: 1366px) {
